@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180525"
-#define public MagickPackageReleaseDate "snapshot-20180525"
+#define public MagickPackageVersionAddendum ".020180530"
+#define public MagickPackageReleaseDate "snapshot-20180530"
